--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/styled-engine": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
