--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.14.0",
     "@mui/styled-engine": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/line": "^0.83.0",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
